<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>

    <string name="text_button_warning">Entendi</string>
    <string name="text_title_warning">Atenção</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">"Preencha seu email!"</string>
    <string name="email_text">E-mail</string>

    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>


    <string name="password_empty_register_fragment">Preencha a senha!</string>
    <string name="email_empty_register_fragment">"Preencha um email válido!"</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="tet_title_toolbar_register_fragment">Criar conta</string>

    <string name="text_info_recover_account_fragment">Informe seu email de cadastro para receber\n um link para alteração de senha</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_toolbar_register_fragment">Enviar</string>

    <string name="description_empty_form_task_fragment">Preencha uma descrição</string>

    <string name="account_not_registered_register_fragment">Nenhuma conta encontrda com este e-mail</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente</string>
    <string name="email_in_user_register_fragment">Este e-mail já está em uso</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte</string>

    <string name="error_generic">Erro</string>
    <string name="text_delete_sucess_task">Sucesso!</string>
    <string name="text_save_sucess_form_task_fragment">Salvo!</string>

    <string name="text_list_task_empty">Lista vazia</string>
    <string name="text_title_dialog_delete">Deletar</string>
    <string name="text_message_dialog_delete">Tem certeza que deseja deletar a tarefa?</string>
    <string name="text_button_dialog_confirm">Confirmar?</string>

    <string name="text_list_task_load">Carregando</string>
    <string name="text_toolbar_update_form_task_frgment">Editando tarefa...</string>
    <string name="text_update_sucess_form_task_fragment">Sucesso!</string>
    <string name="text_message_recover_account_fragment">Email enviado</string>





</resources>